devel
-----

* Fixed issue #12778: fails validation if additionalProperties: false.

* Fixed BTS-233 issue: Fixed invalid IndexId comparator.

* Fixed potential deadlock in cluster transactions if a transaction is
  returned that was soft-aborted by transaction garbage collection before.
  This deadlock should rarely ever occur in practice, as it can only be 
  triggered once during the server shutdown sequence.

* Added support of `GEO_DISTANCE`, `GEO_CONTAINS`, `GEO_INTERSECTS`,
  `GEO_IN_RANGE` to ArangoSearch.

* Added new `GeoJSON` ArangoSearch analyzer.

* Added new `GeoPoint` ArangoSearch analyzer.

* Added new `GEO_IN_RANGE` AQL function.

* Fixed handling of failedLeaderJob. In case of a plan modification, that
  removes a server from the plan, e.g. reduce replication factor. Directly
  followed by a failure of the current shard leader, would reinsert
  the just removed server in the plan, which is undesired, we first need
  to have a full "desync" cycle on this server to be reusable in the plan
  again.

* Fixed very spurious errors if the `holdReadLockCollection` replication API for
  the getting-in-sync procedure of shards was called during server shutdown.
  In this case that method could ask the transaction manager for a specific
  transaction, but wasn't returning one due to the server shutdown.

* Added new 'aql' type for ArangoSearch analyzers.

* Obsoleted the startup options `--database.throw-collection-not-loaded-error` 
  and `--ttl.only-loaded-collection`.

  These options were meaningful for the MMFiles storage engine only, but for 
  the RocksDB storage engine they did not make any difference. Using these startup
  options is still possible, but will have no effect other than generating a 
  warning at server startup.

* Added CMake option `USE_MINIMAL_DEBUGINFO`.
  This option is turned off by default. If turned on, the created binaries
  will contain only a minimum amount of debug symbols, reducing the size